--- a/react-weather-app/src/components/Current/Current.module.css
+++ b/react-weather-app/src/components/Current/Current.module.css
@@ -1,6 +1,6 @@
 .current { 
   display: flex;
-  background-image: url(https://wallpaperaccess.com/full/1784147.jpg);
+  background-image: url(https://i.imgur.com/GhQZhaO.jpg);
   background-size: cover;
   border-top-left-radius: 32px;
   border-top-right-radius: 32px;
