--- a/react-weather-app/src/components/Current/Current.module.css
+++ b/react-weather-app/src/components/Current/Current.module.css
@@ -15,7 +15,6 @@
 
 .right {
   padding: 0 96px;
-  margin-left: 128px;
   flex: 1;
   display: flex;
   justify-content: flex-end;
@@ -32,7 +31,8 @@
 
 .temperature {
   text-align: center;
-  font-size: 7rem;
+  font-size: 6rem;
+  font-weight: 300;
 }
 
 .weather {
@@ -57,6 +57,8 @@
 
 .city {
   margin-bottom: 0;
+  letter-spacing: 5px;
+  font-weight: 400;
 }
 
 .city::after {
